bison-parser/examples/ill_typed/bad1.sa
module X
       x : [0 .. 3] init 1;
endmodule

module X	
       x : [0 .. 3] init 1;
endmodule

module Y
       x : [0 .. 3] init 1;
endmodule

